<resources>
    <string name="app_name">SafeKeyboard</string>
    <string name="keyboard_key1">"&#64;"</string>
    <string name="keyboard_key2">"&#38;"</string>
    <string name="keyboard_key3">\"</string>
    <string name="keyboard_key4">"&#60;"</string>
    <string name="keyboard_key5">"&#62;"</string>
    <string name="mLabelTextSize">mLabelTextSize</string>
    <string name="zeroTonine">1234567890</string>
</resources>
