<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="1%p"
    android:keyWidth="10%p"
    android:keyHeight="@dimen/key_num_height"
    android:verticalGap="@dimen/key_vertical_gap">
    <Row>
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyEdgeFlags="left"
            android:keyLabel="!"
            android:keyOutputText="!" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="#"
            android:keyOutputText="#" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="$"
            android:keyOutputText="$" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="%"
            android:keyOutputText="%" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="^"
            android:keyOutputText="^" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="@string/keyboard_key2"
            android:keyOutputText="@string/keyboard_key2" /><!--&-->
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="*"
            android:keyOutputText="*" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="("
            android:keyOutputText="(" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyEdgeFlags="right"
            android:keyLabel=")"
            android:keyOutputText=")" />
    </Row>

    <Row>
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyEdgeFlags="left"
            android:keyLabel="'"
            android:keyOutputText="'" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="@string/keyboard_key3"
            android:keyOutputText="@string/keyboard_key3" /> <!--"-->
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="="
            android:keyOutputText="=" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="_"
            android:keyOutputText="_" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel=":"
            android:keyOutputText=":" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel=";"
            android:keyOutputText=";" />

        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="@string/keyboard_key1"
            android:keyOutputText="@string/keyboard_key1" /><!--@-->
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="~"
            android:keyOutputText="~" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyEdgeFlags="right"
            android:keyLabel="|"
            android:keyOutputText="|" />

    </Row>

    <Row>
        <Key
            android:codes="8226"
            android:horizontalGap="4.8%p"
            android:keyWidth="10%p"
            android:keyEdgeFlags="left"
            android:keyLabel="+"
            android:keyOutputText="+" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="-"
            android:keyOutputText="-" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="\\"
            android:keyOutputText="\\" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="["
            android:keyOutputText="[" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="]"
            android:keyOutputText="]" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="{"
            android:keyOutputText="{" />

        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="}"
            android:keyOutputText="}" />
        <Key
            android:codes="-5"
            android:isRepeatable="true"
            android:keyWidth="14%p"
            android:keyEdgeFlags="right" />
    </Row>

    <Row android:rowEdgeFlags="bottom">
        <Key
            android:codes="-2"
            android:horizontalGap="2.5%p"
            android:keyWidth="14%p"
            android:keyEdgeFlags="left"
            android:keyLabel="123" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel=","
            android:keyOutputText="," />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="."
            android:keyOutputText="." />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="@string/keyboard_key4"
            android:keyOutputText="@string/keyboard_key4" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="@string/keyboard_key5"
            android:keyOutputText="@string/keyboard_key5" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="\?"
            android:keyOutputText="\?" />
        <Key
            android:codes="8226"
            android:keyWidth="10%p"
            android:keyLabel="/"
            android:keyOutputText="/" />
        <Key
            android:codes="100860"
            android:keyWidth="14%p"
            android:keyEdgeFlags="right"
            android:keyLabel="ABC" />
    </Row>
</Keyboard>